--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr-FR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Integration maquette figma contenant l'ensemble des prochaines sorties de film en France qu'on a recuperer sur tmdb à l'aide de l'API ">
-    <title>Film</title>
-    <link rel="stylesheet" href="./assets/styles/reset.css">
-    <link rel="stylesheet" href="./assets/styles/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
-    <script src="./assets/js/main.js" defer> </script>
-</head>
-<body>
-
-    <div id="big-container"> 
-        <!-- Javascript DOM -->
-    </div>
-
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Integration maquette figma contenant l'ensemble des prochaines sorties de film en France qu'on a recuperer sur tmdb à l'aide de l'API ">
+		<title>Film</title>
+		<link rel="stylesheet" href="./assets/styles/reset.css">
+		<link rel="stylesheet" href="./assets/styles/style.css">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
+		<script src="./assets/js/main.js" defer>
+		</script>
+	</head>
+	<body>
+		<div id="big-container">
+			<!-- Javascript DOM -->
+		</div>
+	</body>
 </html>
+
